@@ -1,4 +1,4 @@
 urls=ldap://127.0.0.1
-userName=cn=manager,dc=jayway,dc=se
+userDn=cn=manager,dc=jayway,dc=se
 password=secret
 base=dc=jayway,dc=se
