@@ -12,7 +12,7 @@
 	
 	<bean id="contextSource" class="org.springframework.ldap.support.LdapContextSource" >
 		<property name="urls" value="${urls}" />
-		<property name="userName" value="${userName}" />
+		<property name="userDn" value="${userDn}" />
 		<property name="password" value="${password}" />
 		<property name="base" value="${base}" />
 		<property name="dirObjectFactory" value="org.springframework.ldap.support.DefaultDirObjectFactory" />
